--- a/style.css
+++ b/style.css
@@ -54,6 +54,12 @@ button{
     left: 20px;
 }
 
+#inst{
+    position: absolute;
+    top: 70px;
+    left: 20px;
+}
+
 #newgame{
     position: absolute;
     top: 20px;
@@ -66,6 +72,20 @@ button{
     top: 70px;
 }
 
+.instructions {
+    text-align: left;
+    color: black;
+    
+    padding: 10px;
+    margin-top: 10px;
+    /* Additional styles for the box effect */
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Drop shadow */
+    width: 200px;
+    position: absolute;
+}
+
+
 @media (max-width: 477px){
     #startgame{
        top: 570px;
@@ -77,7 +97,17 @@ button{
     }
     #pausegame{
         top: 620px;
-        left: 50%;
-        transform: translate(-50%);
+        right: 20%;
+        /* transform: translate(-50%); */
+    }
+    #inst{
+        top: 620px;
+        left: 20%;
+    }
+    .instructions{
+        
+        width: 100%;
+        margin-top: 20px;
+        top: 650px;
     }
 }
