--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family:cursive;
+    font-family:Arial, Helvetica, sans-serif;
     text-align: center;
     background: url(mario-bg.jpg);
     background-size: cover;
